--- a/static/result.html
+++ b/static/result.html
@@ -26,7 +26,7 @@
   </head>
 
   <body
-    class="dark bg-[var(--c-black)] text-[var(--c-white)] full flex flex-col items-center min-h-screen"
+    class="flex flex-col items-center bg-[var(--c-black)] min-h-screen text-[var(--c-white)] dark full"
   >
     <script type="module">
       import {
@@ -82,46 +82,46 @@
         setupThemeToggle('invert-theme-button')
       })
     </script>
-    <div class="w-full mt-4 mb-6 text-center">
+    <div class="mt-4 mb-6 w-full text-center">
       <a
-        class="text-6xl text-[var(--c-white)] hover:text-[var(--c-black)] hover:bg-[var(--c-white)] cursor-pointer"
+        class="hover:bg-[var(--c-white)] text-[var(--c-white)] hover:text-[var(--c-black)] text-6xl cursor-pointer"
         href="/"
         >Wrench Report</a
       >
     </div>
 
-    <div class="self-center flex flex-wrap justify-center gap-2 max-w-[75vw]">
+    <div class="flex flex-wrap justify-center self-center gap-2 max-w-[75vw]">
       <a
         href="https://github.com/ryukzak/wrench"
-        class="pb-[0.2ch] pt-[0.2ch] text-[var(--c-purple)] hover:text-[var(--c-black)] hover:bg-[var(--c-purple)] cursor-pointer"
+        class="hover:bg-[var(--c-purple)] pt-[0.2ch] pb-[0.2ch] text-[var(--c-purple)] hover:text-[var(--c-black)] cursor-pointer"
         target="_blank"
         >[github]</a
       >
-      <span class="text-[var(--c-grey)] hidden lg:inline">|</span>
+      <span class="hidden lg:inline text-[var(--c-grey)]">|</span>
       <a
         href="https://github.com/ryukzak/wrench/tree/master/docs"
-        class="pb-[0.2ch] pt-[0.2ch] text-[var(--c-fuschia)] hover:text-[var(--c-black)] hover:bg-[var(--c-fuschia)] cursor-pointer"
+        class="hover:bg-[var(--c-fuschia)] pt-[0.2ch] pb-[0.2ch] text-[var(--c-fuschia)] hover:text-[var(--c-black)] cursor-pointer"
         target="_blank"
         >[isa_docs]</a
       >
-      <span class="text-[var(--c-grey)] hidden lg:inline">|</span>
+      <span class="hidden lg:inline text-[var(--c-grey)]">|</span>
       <a
         href="https://github.com/ryukzak/wrench/blob/master/variants.md"
-        class="pb-[0.2ch] pt-[0.2ch] text-[var(--c-orange)] hover:text-[var(--c-black)] hover:bg-[var(--c-orange)] cursor-pointer"
+        class="hover:bg-[var(--c-orange)] pt-[0.2ch] pb-[0.2ch] text-[var(--c-orange)] hover:text-[var(--c-black)] cursor-pointer"
         target="_blank"
         >[variants]</a
       >
-      <span class="text-[var(--c-grey)] hidden lg:inline">|</span>
+      <span class="hidden lg:inline text-[var(--c-grey)]">|</span>
       <button
         id="invert-theme-button"
-        class="text-[var(--c-blue)] hover:text-[var(--c-black)] hover:bg-[var(--c-blue)] cursor-pointer"
+        class="hover:bg-[var(--c-blue)] text-[var(--c-blue)] hover:text-[var(--c-black)] cursor-pointer"
       >
         [invert_theme]
       </button>
     </div>
 
-    <div class="flex flex-wrap self-center w-full gap-8 p-4 pl-8 pr-8 mt-8">
-      <div class="flex-1 min-w-[300px] max-w-[50%] mt-6">
+    <div class="flex flex-wrap self-center gap-8 mt-8 p-4 pr-8 pl-8 w-full">
+      <div class="flex-1 mt-6 min-w-[300px] max-w-[50%]">
         <div>
           <div>
             <!-- prettier-ignore -->
@@ -129,7 +129,7 @@
               /* variant: {{variant}} */
             </p>
             <!-- prettier-ignore -->
-            <p class="text-[var(--c-grey)] text-left mb-6">
+            <p class="mb-6 text-[var(--c-grey)] text-left">
               /* author: {{name}} */
             </p>
           </div>
@@ -141,10 +141,10 @@
               /* comment: not found */
             </h2>
             <div id="comment-header">
-              <h2 class="text-[var(--c-grey)] mb-4">/* comment */</h2>
+              <h2 class="mb-4 text-[var(--c-grey)]">/* comment */</h2>
               <pre
                 id="comment-text-element"
-                class="bg-[var(--c-dark-grey)] p-4 rounded-lg overflow-x-auto mb-4"
+                class="bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg overflow-x-auto"
               >
 {{comment}}</pre
               >
@@ -153,12 +153,12 @@
 
           <div>
             <div
-              class="flex flex-row items-center justify-between pr-6 mt-6 mb-4"
+              class="flex flex-row justify-between items-center mt-6 mb-4 pr-6"
             >
               <span class="text-[var(--c-grey)]">/* assembler_code */</span>
               <button
                 id="copy-assembler-code-button"
-                class="place-self-end text-[var(--c-white)] hover:text-[var(--c-black)] hover:bg-[var(--c-white)] hover:opacity-80 cursor-pointer"
+                class="place-self-end hover:bg-[var(--c-white)] hover:opacity-80 text-[var(--c-white)] hover:text-[var(--c-black)] cursor-pointer"
               >
                 [copy]
               </button>
@@ -166,13 +166,13 @@
             <div
               id="accordion-collapse-assembler"
               data-accordion="collapse"
-              class="mb-4 bg-[var(--c-dark-grey)] p-4 rounded-lg"
+              class="bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg"
               data-inactive-classes="vim-folded text-[var(--c-orange-low-saturation)]"
               data-active-classes="white bg-transparent"
             >
               <h2
                 id="accordion-collapse-heading-assembler"
-                class="text-[var(--c-orange-low-saturation)] vim-folded flex items-center justify-between w-full text-left hover:opacity-80 hover:bg-[var(--c-white)] hover:text-[var(--c-black)] hover:cursor-pointer"
+                class="flex justify-between items-center hover:bg-[var(--c-white)] hover:opacity-80 w-full text-[var(--c-orange-low-saturation)] hover:text-[var(--c-black)] text-left hover:cursor-pointer vim-folded"
                 data-accordion-target="#accordion-collapse-body-assembler"
                 aria-expanded="true"
                 aria-controls="accordion-collapse-body-assembler"
@@ -186,7 +186,7 @@
               >
                 <pre
                   id="assembler-code-text-element"
-                  class="pb-4 overflow-x-auto rounded-lg"
+                  class="pb-4 rounded-lg overflow-x-auto"
                 >
 {{assembler_code}}</pre
                 >
@@ -196,12 +196,12 @@
 
           <div>
             <div
-              class="flex flex-row items-center justify-between pr-6 mt-6 mb-4"
+              class="flex flex-row justify-between items-center mt-6 mb-4 pr-6"
             >
               <span class="text-[var(--c-grey)]">/* simulation_config */</span>
               <button
                 id="copy-simulation-config-button"
-                class="text-[var(--c-white)] hover:text-[var(--c-black)] hover:bg-[var(--c-white)] hover:opacity-80 cursor-pointer"
+                class="hover:bg-[var(--c-white)] hover:opacity-80 text-[var(--c-white)] hover:text-[var(--c-black)] cursor-pointer"
               >
                 [copy]
               </button>
@@ -209,13 +209,13 @@
             <div
               id="accordion-collapse-simulation-config"
               data-accordion="collapse"
-              class="mb-4 bg-[var(--c-dark-grey)] p-4 rounded-lg"
+              class="bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg"
               data-inactive-classes="vim-folded text-[var(--c-orange-low-saturation)]"
               data-active-classes="white bg-transparent"
             >
               <h2
                 id="accordion-collapse-heading-simulation-config"
-                class="text-[var(--c-orange-low-saturation)] vim-folded flex items-center justify-between w-full text-left hover:opacity-80 hover:bg-[var(--c-white)] hover:text-[var(--c-black)] hover:cursor-pointer"
+                class="flex justify-between items-center hover:bg-[var(--c-white)] hover:opacity-80 w-full text-[var(--c-orange-low-saturation)] hover:text-[var(--c-black)] text-left hover:cursor-pointer vim-folded"
                 data-accordion-target="#accordion-collapse-body-simulation-config"
                 aria-expanded="false"
                 aria-controls="accordion-collapse-body-simulation-config"
@@ -229,7 +229,7 @@
               >
                 <pre
                   id="simulation-config-text-element"
-                  class="pb-4 overflow-x-auto rounded-lg"
+                  class="pb-4 rounded-lg overflow-x-auto"
                 >
 {{yaml_content}}</pre
                 >
@@ -240,12 +240,12 @@
       </div>
 
       <div class="flex-1 min-w-[300px] max-w-[50%]">
-        <h2 class="text-[var(--c-grey)] mt-6 mb-4">/* simulation_result */</h2>
+        <h2 class="mt-6 mb-4 text-[var(--c-grey)]">/* simulation_result */</h2>
 
         <div>
           <pre
             id="status-text-element"
-            class="bg-[var(--c-dark-grey)] p-4 rounded-lg overflow-x-auto mb-4"
+            class="bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg overflow-x-auto"
           >
 {{status}}</pre
           >
@@ -254,13 +254,13 @@
         <div
           id="accordion-collapse-simulation-log"
           data-accordion="collapse"
-          class="mb-4 bg-[var(--c-dark-grey)] p-4 rounded-lg"
+          class="bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg"
           data-inactive-classes="vim-folded text-[var(--c-orange-low-saturation)]"
           data-active-classes="white bg-transparent"
         >
           <h2
             id="accordion-collapse-heading-simulation-log"
-            class="vim-folded text-[var(--c-orange-low-saturation)] flex items-center justify-between w-full text-left hover:opacity-80 hover:bg-[var(--c-white)] hover:text-[var(--c-black)] hover:cursor-pointer"
+            class="flex justify-between items-center hover:bg-[var(--c-white)] hover:opacity-80 w-full text-[var(--c-orange-low-saturation)] hover:text-[var(--c-black)] text-left hover:cursor-pointer vim-folded"
             data-accordion-target="#accordion-collapse-body-simulation-log"
             aria-expanded="false"
             aria-controls="accordion-collapse-body-simulation-log"
@@ -279,16 +279,16 @@
         </div>
         <div
           id="simulation-log-empty-tag"
-          class="hidden mb-4 bg-[var(--c-dark-grey)] p-4 rounded-lg"
+          class="hidden bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg"
         >
           simulation_log = ""
           <span class="text-[var(--c-grey)]"> /* nothing returned */</span>
         </div>
 
-        <h2 class="text-[var(--c-grey)] mt-6 mb-4">/* testcase_result */</h2>
+        <h2 class="mt-6 mb-4 text-[var(--c-grey)]">/* testcase_result */</h2>
         <pre
           id="test-cases-status-element"
-          class="bg-[var(--c-dark-grey)] p-4 rounded-lg overflow-x-auto mb-4"
+          class="bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg overflow-x-auto"
         >
 {{test_cases_status}}</pre
         >
@@ -296,13 +296,13 @@
         <div
           id="accordion-collapse-test-cases-result"
           data-accordion="collapse"
-          class="mb-4 bg-[var(--c-dark-grey)] p-4 rounded-lg"
+          class="bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg"
           data-inactive-classes="vim-folded text-[var(--c-orange-low-saturation)]"
           data-active-classes="white bg-transparent"
         >
           <h2
             id="accordion-collapse-heading-test-cases-result"
-            class="vim-folded flex text-[var(--c-orange-low-saturation)] items-center justify-between w-full text-left hover:opacity-80 hover:bg-[var(--c-white)] hover:text-[var(--c-black)] hover:cursor-pointer"
+            class="flex justify-between items-center hover:bg-[var(--c-white)] hover:opacity-80 w-full text-[var(--c-orange-low-saturation)] hover:text-[var(--c-black)] text-left hover:cursor-pointer vim-folded"
             data-accordion-target="#accordion-collapse-body-test-cases-result"
             aria-expanded="false"
             aria-controls="accordion-collapse-body-test-cases-result"
@@ -324,7 +324,7 @@
         </div>
         <div
           id="test-cases-result-empty-tag"
-          class="hidden mb-4 bg-[var(--c-dark-grey)] p-4 rounded-lg"
+          class="hidden bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg"
         >
           failed_test_case = ""
           <span class="text-[var(--c-grey)]"> /* nothing returned */</span>
@@ -332,13 +332,13 @@
         <div
           id="accordion-collapse-dump"
           data-accordion="collapse"
-          class="mb-4 bg-[var(--c-dark-grey)] p-4 rounded-lg"
+          class="bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg"
           data-inactive-classes="vim-folded text-[var(--c-orange-low-saturation)]"
           data-active-classes="white bg-transparent"
         >
           <h2
             id="accordion-collapse-heading-dump"
-            class="text-[var(--c-orange-low-saturation)] vim-folded flex justify-between w-full text-left hover:opacity-80 hover:bg-[var(--c-white)] hover:text-[var(--c-black)] hover:cursor-pointer"
+            class="flex justify-between hover:bg-[var(--c-white)] hover:opacity-80 w-full text-[var(--c-orange-low-saturation)] hover:text-[var(--c-black)] text-left hover:cursor-pointer vim-folded"
             data-accordion-target="#accordion-collapse-body-dump"
             aria-expanded="false"
             aria-controls="accordion-collapse-body-dump"
@@ -350,14 +350,14 @@
             class="hidden"
             aria-labelledby="accordion-collapse-heading-dump"
           >
-            <pre id="dump-text-element" class="pb-4 overflow-x-auto rounded-lg">
+            <pre id="dump-text-element" class="pb-4 rounded-lg overflow-x-auto">
 {{dump}}</pre
             >
           </div>
         </div>
         <div
           id="dump-empty-tag"
-          class="hidden mb-4 bg-[var(--c-dark-grey)] p-4 rounded-lg"
+          class="hidden bg-[var(--c-dark-grey)] mb-4 p-4 rounded-lg"
         >
           dump = ""
           <span class="text-[var(--c-grey)]"> /* nothing returned */</span>
