--- a/static/form.html
+++ b/static/form.html
@@ -94,6 +94,7 @@
             <option value="risc-iv-32" selected>risc-iv-32</option>
             <option value="f32a">f32a</option>
             <option value="acc32">acc32</option>
+            <option value="m68k">m68k</option>
           </select>
         </div>
 
